// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DialogActions /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 calc(var(--pv-size-base) * 6);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  gap: calc(var(--pv-size-base) * 2);
  height: calc(var(--pv-size-base) * 19);
}

<footer
    class="my-class-name emotion-0"
    data-key="dialog.actions"
  >
    Buttons
  </footer>
</DocumentFragment>
`;

exports[`<DialogActions /> > should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0 calc(var(--pv-size-base) * 6);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  gap: calc(var(--pv-size-base) * 2);
  height: calc(var(--pv-size-base) * 19);
}

<footer
    class="emotion-0"
    data-key="dialog.actions"
  >
    Buttons
  </footer>
</DocumentFragment>
`;
